# Intern-task

./: README.md
Task 1 - Sort letters in file/: 1.txt  11.txt  2.txt  22.txt  3.txt  33.txt  4.txt  44.txt  5.txt  55.txt  CMakeLists.txt  LuxSort.pro  README.md  Scopy.txt  forfunc.h  gtestd.lib  main.cpp
Task 1 - Sort letters in file/LuxSortTest/: CMakeLists.txt  LuxSortTest.pro  main.cpp  unitfunc.h
Task 2 - DBviewer/: Readme.md
Task 2 - DBviewer/lux4/: CMakeLists.txt  createdialog.cpp  createdialog.h  createdialog.ui  dbshow.ui  deleted rows from cmakelist.txt  lux4.pro  main.cpp  opendialog.cpp  opendialog.h  opendialog.ui  showdbdialog.cpp  showdbdialog.h  showdbdialog.ui  widget.cpp  widget.h  widget.ui
build_Gtests_for_task1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Gtests_for_task1.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters
build_task1 - sort letters in file/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  intern_task_1.sln  main.vcxproj  main.vcxproj.filters
build_task2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  lux4.sln  lux4.vcxproj  lux4.vcxproj.filters
